objects/AIA_Benefit_Design__c.object
<CustomObject>
    <fields>
        <fullName>AE_Drawloop__c</fullName>
        <formula>Benefit_Request_Form__r.Opportunity__r.Lead_Rep_Name_User__r.FirstName +' ' +Benefit_Request_Form__r.Opportunity__r.Lead_Rep_Name_User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIAFinal_NAEGS_Adjustment_Sumary_Rev_Num__c</fullName>
        <description>B-03453.Revision number of the BD when I changed over from paper format to AIA workflow in SF.</description>
        <formula>Text(Account__r.AIAFinal_NAEGS_Adjustment_Sumary_Rev_Num__c)</formula>
        <inlineHelpText>Final NAEGS Adjustment Summary Revision Number
Value entered in the related Account record.</inlineHelpText>
        <label>Final NAEGS Adjustment Summary Rev Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIA_Approval_Status_Benefact_Coder__c</fullName>
        <label>Approval Status - Benefact Coder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIA_Approval_Status_Benefit_Coder__c</fullName>
        <label>Approval Status - Benefit Coder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIA_Approval_Status_Benefit_Tester__c</fullName>
        <description>Field to capture Approval Status of Benefit Tester - US1730</description>
        <label>Approval Status - Benefit Tester</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIA_Approval_Status_Contract_Tech__c</fullName>
        <label>Approval Status - Contract Tech</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIA_Approval_Status_NASCO_Benefit_Coder__c</fullName>
        <label>Approval Status - NASCO Benefit Coder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIA_Approval_Status_Pharmacy_Management__c</fullName>
        <label>Approval Status -  Pharmacy Management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIA_Approval_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US:750 
To check the record is submitted for approval.</description>
        <label>AIA Approval Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIA_Approver_Benefact_Coder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Benefact Coder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIA_Approver_Benefit_Coder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Benefit Coder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design1CSz</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIA_Approver_Benefit_Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture Benefit Tester from Account team - US1730</description>
        <label>Approver - Benefit Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design0gqv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIA_Approver_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Approver adds Reject Comments for the BD here</inlineHelpText>
        <label>Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AIA_Approver_MAST_Tech__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - MAST Tech</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIA_Approver_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approver Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AIA_Approver_Pharmacy_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Pharmacy Management</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design1Caa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIA_Approvers_Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approvers Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIA_Benefit_Coder_Approval_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Coder Approval Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIA_Benefit_Coder_Response_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Coder Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIA_Benefit_Coder_Response_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Coder Response (Days)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIA_Benefit_Tester_Approval_Start_Date__c</fullName>
        <description>Created as part of US1730</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Tester Approval Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIA_Benefit_Tester_Response_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Tester Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIA_Benefit_Tester_Response_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Tester Response (Days)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Drawloop__c</fullName>
        <formula>Text(Benefit_Request_Form__r.Opportunity__r.Service_Rep__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Implementation__r.Opportunity__r.Account.Id</formula>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benefit Design</relationshipLabel>
        <relationshipName>Benefit_Design</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Legal_Entity_Drawloop__c</fullName>
        <label>Admin Legal Entity Drawloop</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CFMI</fullName>
                </value>
                <value>
                    <fullName>GHMSI</fullName>
                </value>
                <value>
                    <fullName>CFBC</fullName>
                </value>
                <value>
                    <fullName>CFBC and GHMSI</fullName>
                </value>
                <value>
                    <fullName>CFBC and CFMI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ancillary_Tech_Approval_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ancillary Tech Approval Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ancillary_Tech_Response_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ancillary Tech Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ancillary_Tech_Response_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ancillary Tech Response (Days)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Initial_Submission_Date__c</fullName>
        <description>B-03535</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Initial Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status_Analyst__c</fullName>
        <label>Approval Status - Ancillary Tech</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status_MAST_Tech__c</fullName>
        <label>Approval Status - MAST Tech</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status_Pharmacy_Operations__c</fullName>
        <label>Approval Status - Pharmacy Operations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status_Vision_Analyst__c</fullName>
        <label>Approval Status - Vision Analyst</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for Benefit Design Approval Team Approval</fullName>
                    <default>true</default>
                    <label>Waiting for Benefit Design Approval Team Approval</label>
                </value>
                <value>
                    <fullName>Waiting for Benefit Design Meeting Approval</fullName>
                </value>
                <value>
                    <fullName>Initiating Benefit Design Restart</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Ancillary_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Ancillary Tech</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design_c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Benefit_Coder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - NASCO Benefit Coder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design_c1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Contract_Tech__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Contract Tech</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design_c2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Pharmacy_Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver -Pharmacy Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design0uN4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_QA_Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - QA Auditor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design_c3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Vision_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver-Vision Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design0u7Q</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_Approval_Date__c</fullName>
        <description>B-03535</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BD Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRF_Name__c</fullName>
        <description>Used for MEIDS integration - to pull the identity protection mandate. 2017 AIA May Release</description>
        <formula>Benefit_Request_Form__r.Name</formula>
        <label>BRF Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_Request_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BRF Request Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefact_Coder_Approval_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefact Coder Approval Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefact_Coder_Response_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefact Coder Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefact_Coder_Response_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefact Coder Response (Days)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Request Form</label>
        <referenceTo>Benfit_Request_Form__c</referenceTo>
        <relationshipLabel>Benefit Design</relationshipLabel>
        <relationshipName>Benefit_Design</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Selection__c</fullName>
        <label>Benefit Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Exclusion</fullName>
                </value>
                <value>
                    <fullName>Emergency Contraception Exclusion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BlueFund_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BlueFund Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Both_Checker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Both Checker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compatible_Checker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compatible Checker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Tech_Approval_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Tech Approval Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Tech_Response_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Tech Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Tech_Response_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Tech Response (Days)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_BD_Drug_Products__c</fullName>
        <label>Count of BD Drug Products</label>
        <summaryFilterItems>
            <field>AIA_Benefit_Design_Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Drug</value>
        </summaryFilterItems>
        <summaryForeignKey>AIA_Benefit_Design_Product__c.Benefit_Design__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Benefit_Design_Product__c</fullName>
        <label>Count of Benefit Design Product</label>
        <summaryForeignKey>AIA_Benefit_Design_Product__c.Benefit_Design__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Days_to_Approve_BDF__c</fullName>
        <description>B-03535 create a formula field that will capture the calculation of how long it took to approve the BD.  Formula:  BD Approval Date - Approval Initial Submission Date.</description>
        <formula>If(ISBLANK(BD_Approval_Date__c),Today()-Approval_Initial_Submission_Date__c, BD_Approval_Date__c - Approval_Initial_Submission_Date__c)</formula>
        <label>Days to Approve BD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Approve_BD__c</fullName>
        <description>B-03535 create a formula field that will capture the calculation of how long it took to approve the BD.  Formula:  BD Approval Date - Approval Initial Submission Date.</description>
        <formula>If(ISBLANK(BD_Approval_Date__c),Today()-Approval_Initial_Submission_Date__c, BD_Approval_Date__c - Approval_Initial_Submission_Date__c)</formula>
        <label>Days to Approve BD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drawloop_5_digit_account_number__c</fullName>
        <formula>Parent_Account__r.NASCO_Account_Number__c</formula>
        <label>Drawloop 5 digit account number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_ADR_Name__c</fullName>
        <formula>Benefit_Request_Form__r.Opportunity__r.ADR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drawloop ADR Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_ARC_Approval_Date__c</fullName>
        <formula>Benefit_Request_Form__r.ARC_Approval_Date__c</formula>
        <label>Drawloop ARC Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drawloop_Benefit_Effective_Date__c</fullName>
        <formula>Benefit_Request_Form__r.Benefit_Effective_Date__c</formula>
        <label>Drawloop Benefit Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drawloop_Control_Panel__c</fullName>
        <formula>Text(Benefit_Request_Form__r.Control_Plan__c)</formula>
        <label>Drawloop Control Panel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Effective_date_of_change__c</fullName>
        <formula>Benefit_Request_Form__r.Benefit_Effective_Date__c</formula>
        <label>Drawloop Effective date of change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drawloop_Original_effective_date__c</fullName>
        <formula>Parent_Account__r.NASCO_Original_Effective_Date__c</formula>
        <label>Drawloop Original effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drawloop_Renewal_date__c</fullName>
        <formula>Parent_Account__r.Final_Renewal_Date__c</formula>
        <label>Drawloop Renewal date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drawloop_account_Name__c</fullName>
        <formula>Account__r.Account_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drawloop account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_sub_group_account__c</fullName>
        <formula>IF(Benefit_Request_Form__r.Account__r.Has_Sub_Groups__c=true, Account__r.Account_Legal_Name__c,'NA')</formula>
        <label>Drawloop sub group account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facets_Group_ID__c</fullName>
        <description>This field displays the value from associated opportunity. This is used for Salesforce-MEIDS integration.</description>
        <formula>Benefit_Request_Form__r.Opportunity__r.Facets_Grp_Num__c</formula>
        <label>Facets Group ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstHelp_Checker__c</fullName>
        <formula>IF( Benefit_Request_Form__r.First_Help_Checker__c ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FirstHelp Checker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Arrangement__c</fullName>
        <formula>TEXT(Benefit_Request_Form__r.Funding_Arrangements__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Arrangement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headquarters_Address__c</fullName>
        <formula>Implementation__r.Account__r.BillingStreet + " " + Implementation__r.Account__r.BillingCity + " " + Implementation__r.Account__r.BillingCountry + " " + Implementation__r.Account__r.BillingState + " " + Implementation__r.Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Headquarters Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identity_Protection__c</fullName>
        <description>B-03894</description>
        <label>Identity Protection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipName>Benefit_Design_c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <formula>TEXT(Benefit_Request_Form__r.Jurisdiction__c)</formula>
        <label>Jurisdiction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_only__c</fullName>
        <formula>DATEVALUE( LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MAST_Tech_Approval_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MAST Tech Approval Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MAST_Tech_Response_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MAST Tech Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MAST_Tech_Response_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MAST Tech Response (Days)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Account_Dedicated_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mail Account Dedicated Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mail_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mail Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mail_Ancillary_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mail Ancillary Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_DesignKaP0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mail_Benefit_Admin_Account_Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mail Benefit Admin Account Setup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mail_Benefit_Admin_Workflow_Mgmt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mail Benefit Admin Workflow Mgmt</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mail_Benefit_NASCO_Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mail Benefit NASCO Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mail_Implementation_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mail Implementation PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_DesignbPBa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mail_Production_ID_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mail Production ID Card</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mail_Settlements_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mail Settlements Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mail_Underwriter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mail Underwriter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NASCO_Acct__c</fullName>
        <description>This field displays the value from associated opportunity. This is used for Salesforce-MEIDS integration.</description>
        <formula>Benefit_Request_Form__r.Opportunity__r.NASCO_Acct_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NASCO Acct. #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASCO_Benefit_Coder_Approval_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO Benefit Coder Approval Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NASCO_Benefit_Coder_Response_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO Benefit Coder Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NASCO_Benefit_Coder_Response_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO Benefit Coder Response (Days)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nonprofit__c</fullName>
        <inlineHelpText>Helpt text: The Group organized and operates as a nonprofit entity.</inlineHelpText>
        <label>Nonprofit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Contract_End_Date__c</fullName>
        <description>This field displays the value from associated opportunity. This is used for Salesforce-MEIDS integration.</description>
        <formula>Benefit_Request_Form__r.Opportunity__r.Contract_End_Date__c</formula>
        <label>Opportunity Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Effective_Date__c</fullName>
        <description>This field displays the value from associated opportunity. This is used for Salesforce-MEIDS integration.</description>
        <formula>Benefit_Request_Form__r.Opportunity__r.Effective_Date__c</formula>
        <label>Opportunity Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Used for MEIDS integration - to pull the identity protection mandate. 2017 AIA May Release</description>
        <formula>Benefit_Request_Form__r.Opportunity__r.Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppose_Contracteptive_Service__c</fullName>
        <inlineHelpText>The Group opposes providing coverage for some or all of the contraceptive services required to be covered under section 2713 of the PHS Act and the companion provisions of ERISA and the Code on account of religious objections. The Group organized and oper</inlineHelpText>
        <label>Oppose Contraceptive Service</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Religions_Exemption_Prerequisites__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>story 3416 - aia</description>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benefit Design (Sub Group Account)</relationshipLabel>
        <relationshipName>Benefit_DesignAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>